creaé 2em version

--- a/Git/index.html
+++ b/Git/index.html
@@ -13,6 +13,13 @@
 		<h1>Bienvenue chez les Geeks</h1>
 		<p></p>
 	</header>
+	<main>
+		<section>
+			<article>
+				<h2>C'est chez nous!</h2>
+			</article>
+		</section>
+	</main>
 	
 </body>
 </html>
