--- a/Git/index.html
+++ b/Git/index.html
@@ -17,6 +17,7 @@
 		<section>
 			<article>
 				<h2>C'est chez nous!</h2>
+				<p>une autre modif pour voir ou on en est </p>
 			</article>
 		</section>
 	</main>
