--- a/Git/index.html
+++ b/Git/index.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<h1>Bienvenue chez les Geeks</h1>
-		<p></p>
+		<a href="contact.html">Contacts</a>
 	</header>
 	<main>
 		<section>
