--- a/Git/contact.html
+++ b/Git/contact.html
@@ -19,6 +19,10 @@
 				<h2>contactez nous c'est trop fifou</h2>
 				<p>une autre modif pour voir ou on en est </p>
 			</article>
+			<article>
+				<h2>c'est toi le contact</h2>
+				<p>le jeux de mot pouri</p>
+			</article>
 		</section>
 	</main>
 	
