--- a/Git/contact.html
+++ b/Git/contact.html
@@ -21,7 +21,7 @@
 			</article>
 			<article>
 				<h2>c'est toi le contact</h2>
-				<p>le jeux de mot pouri</p>
+				<p>le jeux de mot pouriazerty</p>
 			</article>
 		</section>
 	</main>
