ajout color et article

--- a/Git/index.html
+++ b/Git/index.html
@@ -12,12 +12,17 @@
 	<header>
 		<h1>Bienvenue chez les Geeks</h1>
 		<a href="contact.html">Contacts</a>
+		<a href="a-propos.html">Contacts</a>
 	</header>
 	<main>
 		<section>
 			<article>
 				<h2>C'est chez nous!</h2>
 				<p>une autre modif pour voir ou on en est </p>
+			</article>
+			<article>
+				<h2>C'est chez toi !</h2>
+				<p>une autre modif pour voir </p>
 			</article>
 		</section>
 	</main>
