--- a/Git/a-propos.html
+++ b/Git/a-propos.html
@@ -22,8 +22,9 @@
 			<article>
 				<h2>c'est toi le contact</h2>
 				<p>le jeux de mot pouri</p>
-
-
+			</article>
+			<article>
+				<p>nouvelle article pour voir </p>
 			</article>
 		</section>
 	</main>
